--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
                         
 
                         <!-- JS_FORM_VALIDATION START -->
-                        <div class="col-12 mt-4 col-md-6">
+                        <div class="col-12 mt-4 col-md-8">
                             <div class="card w-100">
                                 <div class="card-header">
-                                    <h3>js-form-validation</h3>
+                                    <h3>Form validation</h3>
                                 </div>
                                 <div class="card-body">
                                     <!--FORM-->
@@ -222,10 +222,10 @@
                                             <div class="form-group">
                                                 <div class="row">
                                                     <div class="col-6">
-                                                        <input type="text" id="fname" placeholder="Firstname" class="form-control" maxlength="40" onkeypress="return /[a-z]/i.test(event.key)" required>
+                                                        <input type="text" id="fname" placeholder="Firstname" class="form-control" maxlength="20" onkeypress="return /[a-z]/i.test(event.key)" required>
                                                     </div>
                                                     <div class="col-6">
-                                                        <input type="text" id="lname" placeholder="Lastname" class="form-control" maxlength="40" onkeypress="return /[a-z]/i.test(event.key)" required>
+                                                        <input type="text" id="lname" placeholder="Lastname" class="form-control" maxlength="20" onkeypress="return /[a-z]/i.test(event.key)" required>
                                                     </div>
                                                     <div class="col-12 mt-3">
                                                         <input type="Email" id="email" placeholder="Email" class="form-control" required>
@@ -265,9 +265,9 @@
                                     </div>
                                 </div>
                         </div>
-                        <div class="col-12 mt-4 col-md-6">
+                        <div class="col-12 mt-4 col-md-4">
                             <div class="alert" role="alert">
-                                <h5 class="alert-heading">Js form validation with OOP and JSON local storage functionality</h5>
+                                <h5 class="alert-heading">form validation with OOP and JSON local storage</h5><br>
                                 <ul>
                                     <li><span>You can add data from form.</span></li>
                                     <li><span>You can remove data from form.</span></li>
