--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                                     <form>
                                         <div class="form-group">
                                             <div class="row">
-                                                    <div class="col-10 col-md-10">
+                                                    <div class="col-12 col-md-9 col-lg-10">
                                                         <input type="text" class="form-control" id="task" placeholder="Enter task" required>
                                                     </div>
-                                                    <div class="submit col-2 col-md-2">
+                                                    <div class="submit col-12 col-md-3 col-lg-2">
                                                         <input type="submit" class="fom-control btn btn-primary" id="submit" value="Enter">
                                                     </div>
                                                     <div class="col-6 mt-3 mb-2">
