--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                         
                         <!-- DOWNLOADABLE RESUME -->
                         <div class="mt-4 mb-5 d-flex justify-content-center">
-                            <a href="./resume/argiebarcena-resume.docx" class="btn btn-success">
+                            <a href="./resume/Argie Barcena CV(Avion).pdf" class="btn btn-success">
                                 <span>My Resume</span> <img src="./img/dl.png" alt="Download photo" width="20px">
                             </a>
                         </div>
